--- a/frontend/src/components/ToolCard/toolCard.css
+++ b/frontend/src/components/ToolCard/toolCard.css
@@ -1,12 +1,59 @@
 .tool {
-	border: 2px solid grey;
+	border: 1px solid lightgray;
+	border-radius: 1rem;
+	display: grid;
+	grid-template-rows: 0.5fr;
+	background-color: white;
 }
 
 .container {
-	padding: 10px;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	grid-auto-rows: minmax(250px, auto);
+	grid-gap: 3rem;
+	margin: 0 auto;
+	max-width: 1200px;
+	padding: 1rem;
+}
+
+.tool-image {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.tool-title h3 {
+	font-weight: 300;
+}
+
+.tool-title {
+	background-color: #276074;
+	color: white;
+	margin: 0;
+	padding: 1rem;
+	text-align: center;
+}
+
+.cardBtns,
+.tool-location {
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	padding: 5px;
+}
+
+.cardBtns {
+	display: flex;
+	justify-content: space-between;
+}
+.updateBtn,
+.reserveBtn {
+	padding: 5px;
+	margin: 5px;
 }
 
 img {
-	height: 300px;
-	width: 300px;
+	height: 200px;
+	width: 200px;
+	padding: 1rem;
 }
