--- a/frontend/src/components/UpdateTool/updateTool.css
+++ b/frontend/src/components/UpdateTool/updateTool.css
@@ -1,10 +1,58 @@
-form {
-    text-align: left;
+.form-container * {
+	/* border: 1px solid red; */
+	background-color: lemonchiffon;
 }
-ul {
-    list-style: none;
-    padding: 0;
+.form-h2 {
+	margin: 0;
+	text-align: center;
+	font-size: 2rem;
 }
-li {
-    padding: .25rem;
+.form {
+	text-align: left;
+}
+.form-ul {
+	list-style: none;
+	padding: 0.5rem 1rem;
+	display: block;
+	width: 50%;
+}
+.form-li {
+	padding: 0.25rem;
+	display: flex;
+	/* flex-direction: column; */
+	flex-wrap: wrap;
+}
+.form-label {
+	width: 100%;
+	height: 1.25rem;
+}
+.form-input,
+.form-select {
+	height: 1.25rem;
+	border-radius: 0.3rem;
+}
+.form-textarea {
+	border-radius: 0.3rem;
+	border: 2px double black;
+}
+
+.form-select {
+	height: 1.75rem;
+}
+span {
+	display: block;
+	width: 100%;
+	height: 1.25rem;
+}
+.form-radio-label {
+	width: 2rem;
+	justify-content: center;
+	line-height: 150%;
+}
+.form-button {
+	background-color: #276074;
+	/* color: #d3d3d3; */
+	color: white;
+	padding: 0.5rem;
+	border-radius: 0.45rem;
 }
