Add favicon and interactive tool cards

--- a/frontend/src/components/ToolCard/toolCard.css
+++ b/frontend/src/components/ToolCard/toolCard.css
@@ -5,6 +5,9 @@
 	grid-template-rows: 0.5fr;
 	background-color: white;
 }
+.tool:hover {
+	transform: scale(1.05);
+}
 
 .container {
 	display: grid;
