--- a/frontend/src/components/UpdateTool/updateTool.css
+++ b/frontend/src/components/UpdateTool/updateTool.css
@@ -15,6 +15,7 @@
 	padding: 0.5rem 1rem;
 	display: block;
 	width: 50%;
+	margin: 0;
 }
 .form-li {
 	padding: 0.25rem;
@@ -53,13 +54,12 @@
 	background-color: #276074;
 	/* color: #d3d3d3; */
 	color: white;
-	padding: .5rem;
-	border-radius: 0.45rem;	
-	width: 15%;
+	padding: 0.5rem;
+	border-radius: 0.45rem;
+	width: 66px;
 }
 #update {
 	margin-right: 1rem;
-	
 }
 #delete {
 	background-color: rgb(223, 5, 5);
