--- a/frontend/src/components/SignUp/signUp.css
+++ b/frontend/src/components/SignUp/signUp.css
@@ -1,3 +1,151 @@
 .sign-up-form-li {
 	list-style-type: none;
+	margin: 30px;
+}
+
+.sign-up-form {
+	background-color: #276074;
+	position: relative;
+	color: lightgray;
+}
+
+.sign-up-form-ul {
+	text-align: center;
+}
+
+/* adapted from https://www.sliderrevolution.com/resources/css-text-animation/ */
+
+.tooly-header {
+	font-family: inherit;
+	perspective: 1000px;
+	text-align: center;
+	margin: 80px;
+	color: gray;
+	font-family: 'Source Serif 4', sans-serif;
+	font-weight: 800;
+}
+
+.tooly-header span {
+	cursor: pointer;
+	display: inline-block;
+	font-size: 100px;
+	user-select: none;
+	line-height: 0.8;
+}
+
+.tooly-header span:nth-child(1).active {
+	animation: balance 1.5s ease-out;
+	transform-origin: bottom left;
+}
+
+@keyframes balance {
+	0%,
+	100% {
+		transform: rotate(0deg);
+	}
+
+	30%,
+	60% {
+		transform: rotate(-45deg);
+	}
+}
+
+.tooly-header span:nth-child(2).active {
+	animation: shrinkjump 1s ease-in-out;
+	transform-origin: bottom center;
+}
+
+@keyframes shrinkjump {
+	10%,
+	35% {
+		transform: scale(2, 0.2) translate(0, 0);
+	}
+
+	45%,
+	50% {
+		transform: scale(1) translate(0, -150px);
+	}
+
+	80% {
+		transform: scale(1) translate(0, 0);
+	}
+}
+
+.tooly-header span:nth-child(3).active {
+	animation: falling 2s ease-out;
+	transform-origin: bottom center;
+}
+
+@keyframes falling {
+	12% {
+		transform: rotateX(240deg);
+	}
+
+	24% {
+		transform: rotateX(150deg);
+	}
+
+	36% {
+		transform: rotateX(200deg);
+	}
+
+	48% {
+		transform: rotateX(175deg);
+	}
+
+	60%,
+	85% {
+		transform: rotateX(180deg);
+	}
+
+	100% {
+		transform: rotateX(0deg);
+	}
+}
+
+.tooly-header span:nth-child(4).active {
+	animation: rotate 1s ease-out;
+}
+
+@keyframes rotate {
+	20%,
+	80% {
+		transform: rotateY(180deg);
+	}
+
+	100% {
+		transform: rotateY(360deg);
+	}
+}
+
+.tooly-header span:nth-child(5).active {
+	animation: toplong 1.5s linear;
+}
+
+@keyframes toplong {
+	10%,
+	40% {
+		transform: translateY(-48vh) scaleY(1);
+	}
+
+	90% {
+		transform: translateY(-48vh) scaleY(4);
+	}
+}
+
+.tooly-header span:nth-child(6).active {
+	animation: balance 1.5s ease-out;
+	transform-origin: bottom left;
+}
+
+@keyframes balance {
+	0%,
+	100% {
+		transform: rotate(0deg);
+	}
+
+	30%,
+	60% {
+		transform: rotate(-45deg);
+	}
 }
