fixed link to update

--- a/src/components/ToolCardDetail/ToolCardDetail.css
+++ b/src/components/ToolCardDetail/ToolCardDetail.css
@@ -19,4 +19,9 @@ li{
 
 .dates {
 	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+	/* grid-auto-rows: minmax(25px, auto); */
+	/* grid-gap: 1rem; */
+	margin: 10px;
+
 }
